--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
 
 install:
-  - pip install -r requirements/qa.txt
+  - pip install -r requirements/dev.txt
 
 script:
   - pytest
