add django-configurations, fix some arrors

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = Project.settings_qa
+DJANGO_SETTINGS_MODULE = Project.settings
+DJANGO_CONFIGURATION=Testing
 norecursedirs = env/* docs/* misc/* static/*
 
 addopts = -vvs --mccabe --flake8
