--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = Project.settings
-DJANGO_CONFIGURATION=Testing
+DJANGO_CONFIGURATION = Testing
 norecursedirs = env/* docs/* misc/* static/*
 
 addopts = -vvs --mccabe --flake8
